--- a/javascript-labs/08-09-apis_requests/01.md
+++ b/javascript-labs/08-09-apis_requests/01.md
@@ -16,7 +16,7 @@ Use try catch blocks or at least handle errors appropriately. There are many req
 
 All this can be done with free and no authentication APIs!
 
-- <a href="http://restcountries.eu/" target="_blank">Country Data</a>
+- <a href="http://restcountries.com/" target="_blank">Country Data</a>
 - <a href="http://open-notify.org/" target="_blank">General Space Data</a>
 - <a href="https://freegeoip.io/" target="_blank">Geolocation of IP addresses</a>
 - <a href="http://worldtimeapi.org/" target="_blank">World Time</a>
